Fixed spacing issue

--- a/photoTree/tree/static/tree/CSS/chart.css
+++ b/photoTree/tree/static/tree/CSS/chart.css
@@ -134,13 +134,6 @@
   width: 100%;
 }
 
-.node-image {
-  height: 6rem;
-  width: 6rem;
-  margin: 4px;
-
-  border-radius: 50px;
-}
 
 .nodeBox-button {
   background-color: white;
@@ -156,13 +149,6 @@
 
 .tree-image {
   width: 50px;
-}
-
-.footer-node {
-  display: flex;
-  border: 2px solid black;
-
-  border-radius: 50px;
 }
 
 .confirm-box {
@@ -297,9 +283,25 @@ body {
   justify-content: space-between;
   width: 100%;
   height: auto;
+  bottom: 0;
   position: relative;
 
   background-color: #002e5d;
+}
+
+.node-image {
+  height: 5rem;
+  width: 5rem;
+  margin: 4px;
+
+  border-radius: 50px;
+}
+
+.footer-node {
+  display: flex;
+  border: 2px solid black;
+
+  border-radius: 50px;
 }
 
 .header-link {
